# Fixly-Desktop

./: .env.example  .gitattributes  .gitignore  AUTH_ARCHITECTURE.md  CHANGELOG.md  KNOWN_ISSUES.md  README.md  RELEASE.md  RELEASE_NOTES.md  TESTING_GUIDE.md  package.json  pnpm-lock.yaml  turbo.json
apps/backend/: .env.default  .env.example  backend.spec  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_backend.py
apps/backend/app/: config.py  main.py
apps/backend/app/core/: exceptions.py  feature_flags.py  jwt.py  logging.py  security.py  supabase.py
apps/backend/app/dependencies/: auth.py
apps/backend/app/prompts/: __init__.py  manager.py  registry.py  utils.py
apps/backend/app/providers/: __init__.py  base.py  gemini.py  gmail.py  imap.py  ollama.py
apps/backend/app/repositories/: ai_repository.py  assignment_repository.py  auth_repository.py  document_repository.py  email_repository.py  notification_repository.py  pomodoro_repository.py  profile_repository.py  study_repository.py  subject_repository.py
apps/backend/app/schemas/: ai.py  assignment.py  auth.py  common.py  copilot.py  document.py  email.py  notification.py  planner.py  pomodoro.py  profile.py  search.py  study.py  subject.py
apps/backend/app/services/: ai_service.py  assignment_service.py  auth_service.py  command_service.py  context_service.py  copilot_service.py  dashboard_service.py  document_service.py  email_service.py  insight_service.py  notification_service.py  (+12 more)
apps/backend/tests/: test_copilot.py  test_health.py  test_prompts.py  test_study.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+187 files in other folders)
