[package]
name = "fixly-desktop"
version = "1.0.0"
description = "Fixly - AI-powered academic operating system"
authors = ["Aryan Sonsurkar"]
homepage = "https://github.com/aryan-sonsurkar/Fixly-Desktop"
repository = "https://github.com/aryan-sonsurkar/Fixly-Desktop"
license = "MIT"
edition = "2021"

[lib]
name = "fixly_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[package.metadata]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
